[gd_scene load_steps=2 format=3 uid="uid://c1b47lhlotvkk"]

[ext_resource type="Script" path="res://Scripts/Pause.gd" id="1_yw5aj"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yw5aj")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 86.0
offset_right = 748.0
offset_bottom = 200.0
text = "Revenir en arri√®re"

[node name="MenuButton" type="Button" parent="."]
layout_mode = 0
offset_left = 362.0
offset_top = 264.0
offset_right = 748.0
offset_bottom = 378.0
text = "Aller au menu principal"

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 454.0
offset_right = 746.0
offset_bottom = 568.0
text = "Quitter le jeu"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
